--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,14 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Register your account
                 </h1>
-                <form class="space-y-4 md:space-y-6" action="#">
+                <form class="space-y-4 md:space-y-6" action="{% url 'register' %}" method="POST">
+                    {% csrf_token %}
+                    <select id="user_type" name="user_type"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-[12px] md:text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500">
+                        <option selected>Select User Type</option>
+                        <option value="jobseeker">Job Seeker</option>
+                        <option value="employer">Employer</option>
+                    </select>
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
@@ -18,16 +25,16 @@
                             placeholder="name@company.com" required="">
                     </div>
                     <div>
-                        <label for="password"
+                        <label for="password1"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••"
+                        <input type="password" name="password1" id="password1" placeholder="••••••••"
                             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             required="">
                     </div>
                     <div>
-                        <label for="password-2"
+                        <label for="password2"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password Again</label>
-                        <input type="password" name="password-2" id="password-2" placeholder="••••••••"
+                        <input type="password" name="password2" id="password2" placeholder="••••••••"
                             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             required="">
                     </div>
@@ -44,4 +51,14 @@
         </div>
     </div>
 </section>
+
+<script>
+    const selectElement = document.getElementById('user_type');
+    // console.log(selectElement)
+
+    selectElement.addEventListener('change', (event) => {
+        const selectedValue = event.target.value;
+        console.log('Selected User Type:', selectedValue);
+    });
+</script>
 {% endblock content %}
