--- a/templates/search.html
+++ b/templates/search.html
@@ -4,9 +4,10 @@
 
 <section class="bg-gray-50 mt-10 mb-11 h-screen py-12">
     <div class="max-w-[1240px] mx-auto p-5">
-        <form action="#"
+        <form action="#" method="GET"
             class="flex flex-col sm:flex-row items-center justify-between w-full py-5 font-medium text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3">
             <div class="w-[100%]">
+                {% csrf_token %}
                 <input type="text" name="name" id="name"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-[12px] md:text-sm rounded-lg focus:ring-indigo-600 focus:border-indigo-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500"
                     placeholder="keyword e.g Frontend Developer" required>
