--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,15 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Register your account
                 </h1>
+                <div>
+                    {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li class="text-red-500">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
                 <form class="space-y-4 md:space-y-6" action="{% url 'register' %}" method="POST">
                     {% csrf_token %}
                     <select id="user_type" name="user_type"
@@ -40,7 +49,7 @@
                     </div>
                     <button type="submit"
                         class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-                        Crate an account
+                        Create an account
                     </button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                         Already have an account? <a href="{% url 'login' %}"
