--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1289,6 +1289,14 @@ input:checked + .toggle-bg {
   height: 1.25rem;
 }
 
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -2418,6 +2426,14 @@ input:checked + .toggle-bg {
 
   .md\:h-screen {
     height: 100vh;
+  }
+
+  .md\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .md\:h-\[50\%\] {
+    height: 50%;
   }
 
   .md\:w-auto {
