--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'search' %}"
+                            <a href="{% url 'jobs_list' %}"
                                 class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-indigo-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                                 Find Jobs
                             </a>
