--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
 </section>
 
 <div class="flex justify-center mt-11 mb-11">
-    <a href="{% url 'search' %}"
+    <a href="{% url 'jobs_list' %}"
         class="inline-flex items-center px-3 py-2 text-xl font-medium text-center text-white bg-indigo-700 rounded-lg hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">
         View All Jobs
     </a>
