add profile pages

--- a/templates/access_denied.html
+++ b/templates/access_denied.html
@@ -9,7 +9,7 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Access denied.
                 </h1>
-                <p>You must be an employer to add a job.</p>
+                <p>You are not allowed to see this page.</p>
 
             </div>
         </div>
