--- a/templates/add_job.html
+++ b/templates/add_job.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if employer.company_info_done %}
 <section class="bg-gray-50 h-screen py-12">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <div
@@ -95,4 +96,19 @@
         </div>
     </div>
 </section>
+{% else %}
+<section class="bg-gray-50 h-screen py-12">
+    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto py-50">
+        <div
+            class="bg-white rounded-lg shadow dark:border w-full md:max-w-[1240px] mx-auto p-5 md:mt-0  xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+                <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                    Please Complete Profile to be able to view page
+                </h1>
+
+            </div>
+        </div>
+    </div>
+</section>
+{% endif %}
 {% endblock content %}
