--- a/templates/base.html
+++ b/templates/base.html
@@ -52,17 +52,28 @@
                                 Find Jobs
                             </a>
                         </li>
-                        {% if user.is_employer %}
+                        {% if user.is_authenticated and user.is_employer %}
                         <li>
                             <a href="{% url 'add_job' %}"
                                 class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-indigo-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                                 AddJob
                             </a>
                         </li>
-                        {% endif %}
-                        {% if user.is_authenticated %}
                         <li>
-                            <a href="#"
+                            <a href="{% url 'employer_profile' %}"
+                                class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-indigo-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+                                Profile
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'logout' %}"
+                                class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-indigo-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+                                logout
+                            </a>
+                        </li>
+                        {% elif user.is_authenticated and user.is_job_seeker %}
+                        <li>
+                            <a href="{% url 'job_seeker_profile' %}"
                                 class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-indigo-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                                 Profile
                             </a>
