add update page and update messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
 
 <body>
     <!-- Add this -->
-    <nav class="fixed w-full top-0 bg-white border-gray-200 px-2 sm:px-4 py-2.5 shadow-md rounded dark:bg-gray-800">
+    <nav
+        class="fixed w-full top-0 bg-white border-gray-200 px-2 sm:px-4 py-2.5 z-10 shadow-md rounded dark:bg-gray-800">
         <div class="max-w-[1240px] mx-auto">
             <div class="container flex flex-wrap items-center justify-between mx-auto">
                 <a href="{{ .Site.Params.homepage }}/" class="flex items-center">
