--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,15 @@
                     {% if messages %}
                     <ul class="messages">
                         {% for message in messages %}
-                        <li class="text-red-500">{{ message }}</li>
+                        {% if message.tags == "success" %}
+                        <li class="font-semibold text-green-600">
+                            {{ message }}
+                        </li>
+                        {% else %}
+                        <li class="font-semibold text-red-600">
+                            {{ message }}
+                        </li>
+                        {% endif%}
                         {% endfor %}
                     </ul>
                     {% endif %}
