--- a/templates/job_details.html
+++ b/templates/job_details.html
@@ -4,7 +4,7 @@
 <section class="bg-gray-50 h-screen py-12">
     <div class="bg-indigo-700 w-full">
         <div class="max-w-[1240px] mx-auto py-5">
-            <a href="{% url 'search' %}" class="text-white font-semibold flex gap-2 items-center">
+            <a href="{% url 'jobs_list' %}" class="text-white font-semibold flex gap-2 items-center">
                 <svg class="w-4 h-4 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                     width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -21,17 +21,15 @@
                 <div class="flex flex-col gap-4">
                     <div
                         class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
-                        <p class="text-gray-500">Remote</p>
-                        <h3 class="text-2xl md:text-3xl">Senior Rect Developer</h3>
+                        <p class="text-gray-500">{{ job.job_type }}</p>
+                        <h3 class="text-2xl md:text-3xl">{{ job.title }}</h3>
                         <p class="text-indigo-700 font-semibold">Boston, MA</p>
                     </div>
                     <div
                         class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
                         <h4 class="text-indigo-700 font-semibold text-xl md:text-2xl mb-2">Job Description</h4>
                         <p class="mb-2">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis ratione ex, possimus
-                            asperiores repellendus ut, tempore suscipit porro repudiandae illum corporis, molestiae
-                            consequatur voluptatem. Fuga eveniet corrupti laborum voluptas iste!
+                            {{ job.description }}
                         </p>
                         <h4 class="text-indigo-700 font-semibold text-xl md:text-2xl mb-2">Salary</h4>
                         <p class="mb-2">
@@ -54,19 +52,21 @@
                         </p>
 
                     </div>
-
+                    {% if can_edit %}
                     <div
-                        class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
+                        class="w-full flex flex-col bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
                         <h4 class="text-gray-700 font-semibold text-xl md:text-2xl mb-4">Manage Job</h4>
-                        <button
+                        <a href="{% url 'update_job' job.pk %}"
                             class="w-full mb-2 text-white bg-indigo-600 hover:bg-indigo-700 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">
                             Edit Job
-                        </button>
-                        <button
+                        </a>
+                        <a href="#"
                             class="w-full text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
                             Delete Job
-                        </button>
+                        </a>
                     </div>
+                    {% endif %}
+                    
 
                 </div>
             </div>
