--- a/templates/job_details.html
+++ b/templates/job_details.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load custom_filters %}
 {% block content %}
 <section class="bg-gray-50 h-screen py-12">
     <div class="bg-indigo-700 w-full">
@@ -23,7 +23,7 @@
                         class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
                         <p class="text-gray-500">{{ job.job_type }}</p>
                         <h3 class="text-2xl md:text-3xl">{{ job.title }}</h3>
-                        <p class="text-indigo-700 font-semibold">Boston, MA</p>
+                        <p class="text-indigo-700 font-semibold">{{ job.location }}</p>
                     </div>
                     <div
                         class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
@@ -33,7 +33,7 @@
                         </p>
                         <h4 class="text-indigo-700 font-semibold text-xl md:text-2xl mb-2">Salary</h4>
                         <p class="mb-2">
-                            R30k Monthly
+                            {{ job.salary|money:"R"  }} Monthly
                         </p>
                     </div>
                 </div>
@@ -44,11 +44,9 @@
                         class="w-full bg-white p-4 rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700">
 
                         <h4 class="text-gray-700 font-semibold text-xl md:text-2xl mb-2">Company Info</h4>
-                        <p class="text-gray-900 font-semibold text-[14px]">NewTek Solutions</p>
+                        <p class="text-gray-900 font-semibold text-[14px]">{{ employer.company_name }}</p>
                         <p class="text-gray-900 font-semibold text-[12px] py-2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit cumque architecto, cum a
-                            cupiditate neque ipsam vero magni, aperiam unde adipisci nihil repudiandae consequatur odio
-                            molestias explicabo, quod consequuntur eius?
+                            {{ employer.company_description }}
                         </p>
 
                     </div>
